⛲feat: add endpoints booking
