# src/routes/bookingRoute.ts
@@ -1,0 +1,267 @@
+import { Router } from 'express';
+import { authMiddleware } from '../middlewares/auth';
+import { BookingController } from '../controllers/bookingController';
+
+const router = Router();
+
+/**
+ * @swagger
+ * tags:
+ *   name: Booking
+ *   description: Routes for booking manipulation
+ */
+
+/**
+ * @swagger
+ * /bookings:
+ *   get:
+ *     summary: View all bookings
+ *     description: Returns information about all bookings
+ *     tags:
+ *       - Booking
+ *     operationId: get_all_bookings
+ *     responses:
+ *       200:
+ *         description: Success
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/BookingList"
+ *       500:
+ *         description: InternalServerError
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/InternalServerError"
+ */
+
+router.get('/', BookingController.getBookings);
+
+/**
+ * @swagger
+ * /bookings/{booking_id}:
+ *   parameters:
+ *     - name: booking_id
+ *       in: path
+ *       required: true
+ *       description: ID of the booking that will be displayed
+ *       schema:
+ *         type: string
+ *   get:
+ *     summary: View booking by id
+ *     description: Returns booking information by id
+ *     tags:
+ *       - Booking
+ *     operationId: get_booking_by_id
+ *     responses:
+ *       200:
+ *         description: Success
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Booking"
+ *       400:
+ *         description: BadRequest
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/BadRequest"
+ *       404:
+ *         description: NotFound
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/NotFound"
+ *       500:
+ *         description: InternalServerError
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/InternalServerError"
+ */
+
+router.get('/:booking_id', BookingController.getBookingById);
+
+/**
+ * @swagger
+ * /bookings:
+ *   post:
+ *     summary: Create a new booking
+ *     description: Creates a new booking based on the data provided in the request body.
+ *     tags:
+ *       - Booking
+ *     operationId: create_booking
+ *     security:
+ *       - jwt: []
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: "#/components/schemas/BookingUpsert"
+ *     responses:
+ *       201:
+ *         description: Success
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Booking"
+ *       400:
+ *         description: BadRequest
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/BadRequest"
+ *       401:
+ *         description: Unauthorized
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Unauthorized"
+ *       403:
+ *         description: Forbidden
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Forbidden"
+ *       404:
+ *         description: NotFound
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/NotFound"
+ *       500:
+ *         description: InternalServerError
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/InternalServerError"
+ */
+
+router.post('/', authMiddleware, BookingController.createBooking);
+
+/**
+ * @swagger
+ * /bookings/{booking_id}:
+ *   parameters:
+ *     - name: booking_id
+ *       in: path
+ *       required: true
+ *       description: Booking ID to be updated
+ *       schema:
+ *         type: string
+ *   put:
+ *     summary: Update booking
+ *     description: Updates the information of the desired booking
+ *     tags:
+ *       - Booking
+ *     operationId: update_booking
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: "#/components/schemas/BookingUpsert"
+ *     security:
+ *       - jwt: []
+ *     responses:
+ *       200:
+ *         description: Success
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Booking"
+ *       400:
+ *         description: BadRequest
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/BadRequest"
+ *       401:
+ *         description: Unauthorized
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Unauthorized"
+ *       403:
+ *         description: Forbidden
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Forbidden"
+ *       404:
+ *         description: NotFound
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/NotFound"
+ *       500:
+ *         description: InternalServerError
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/InternalServerError"
+ */
+
+router.put('/:booking_id', authMiddleware, BookingController.updateBooking);
+
+/**
+ * @swagger
+ * /bookings/{booking_id}:
+ *   parameters:
+ *     - name: booking_id
+ *       in: path
+ *       required: true
+ *       description: ID of the booking to be deleted
+ *       schema:
+ *         type: string
+ *   delete:
+ *     summary: Remove booking
+ *     description: Deletes a booking based on the ID provided
+ *     tags:
+ *       - Booking
+ *     operationId: delete_booking
+ *     security:
+ *       - jwt: []
+ *     responses:
+ *       200:
+ *         description: Success
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/DeleteSuccess"
+ *       400:
+ *         description: BadRequest
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/BadRequest"
+ *       401:
+ *         description: Unauthorized
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Unauthorized"
+ *       403:
+ *         description: Forbidden
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Forbidden"
+ *       404:
+ *         description: NotFound
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/NotFound"
+ *       500:
+ *         description: InternalServerError
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/InternalServerError"
+ */
+
+router.delete('/:booking_id', authMiddleware, BookingController.deleteBooking);
+
+export default router;
