# src/swagger/swagger.json
@@ -19,6 +19,169 @@
       }
     },
     "schemas": {
+      "BookingList": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/Booking"
+        }
+      },
+      "Ticket": {
+        "type": "object",
+        "required": [
+          "adults",
+          "kids",
+          "children"
+        ],
+        "properties": {
+          "adults": {
+            "type": "integer",
+            "description": "Number of adult tickets",
+            "example": 2
+          },
+          "kids": {
+            "type": "integer",
+            "description": "Number of kid tickets",
+            "example": 1
+          },
+          "children": {
+            "type": "integer",
+            "description": "Number of children tickets",
+            "example": 1
+          }
+        }
+      },
+      "Booking": {
+        "type": "object",
+        "required": [
+          "id",
+          "date",
+          "time",
+          "ticket",
+          "total_price",
+          "experience_id",
+          "user_id"
+        ],
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "Unique identifier for the booking",
+            "example": "60b8d295f1c0d2b0f1b2c3d8"
+          },
+          "date": {
+            "type": "string",
+            "format": "date",
+            "description": "Date of the booking",
+            "example": "2024-08-31"
+          },
+          "time": {
+            "type": "string",
+            "format": "time",
+            "description": "Time of the booking",
+            "example": "14:00"
+          },
+          "ticket": {
+            "$ref": "#/components/schemas/Ticket",
+            "description": "Ticket details for the booking, including the number of adults, kids, and children"
+          },
+          "total_price": {
+            "type": "number",
+            "description": "The total price of this reservation",
+            "example": 4.5
+          },
+          "experience_id": {
+            "type": "string",
+            "description": "Unique identifier for the experience being favorited",
+            "example": "60b8d295f1c0d2b0f1b2c3d9"
+          },
+          "user_id": {
+            "type": "string",
+            "description": "Unique identifier for the user who made the booking",
+            "example": "12345"
+          }
+        }
+      },
+      "BookingUpsert": {
+        "type": "object",
+        "required": [
+          "date",
+          "time",
+          "ticket",
+          "total_price",
+          "experience_id"
+        ],
+        "properties": {
+          "date": {
+            "type": "string",
+            "format": "date",
+            "description": "Date of the booking",
+            "example": "2024-08-31"
+          },
+          "time": {
+            "type": "string",
+            "format": "time",
+            "description": "Time of the booking",
+            "example": "14:00"
+          },
+          "ticket": {
+            "$ref": "#/components/schemas/Ticket",
+            "description": "Ticket details for the booking, including the number of adults, kids, and children"
+          },
+          "total_price": {
+            "type": "number",
+            "description": "The total price of this reservation",
+            "example": 4.5
+          },
+          "experience_id": {
+            "type": "string",
+            "description": "Unique identifier for the experience being favorited",
+            "example": "60b8d295f1c0d2b0f1b2c3d9"
+          }
+        }
+      },
+      "BookingUpsertExtended": {
+        "type": "object",
+        "required": [
+          "date",
+          "time",
+          "ticket",
+          "total_price",
+          "experience_id",
+          "user_id"
+        ],
+        "properties": {
+          "date": {
+            "type": "string",
+            "format": "date",
+            "description": "Date of the booking",
+            "example": "2024-08-31"
+          },
+          "time": {
+            "type": "string",
+            "format": "time",
+            "description": "Time of the booking",
+            "example": "14:00"
+          },
+          "ticket": {
+            "$ref": "#/components/schemas/Ticket",
+            "description": "Ticket details for the booking, including the number of adults, kids, and children"
+          },
+          "total_price": {
+            "type": "number",
+            "description": "The total price of this reservation",
+            "example": 4.5
+          },
+          "experience_id": {
+            "type": "string",
+            "description": "Unique identifier for the experience being favorited",
+            "example": "60b8d295f1c0d2b0f1b2c3d9"
+          },
+          "user_id": {
+            "type": "string",
+            "description": "Unique identifier for the user who made the booking",
+            "example": "12345"
+          }
+        }
+      },
       "CategoryList": {
         "type": "array",
         "items": {
@@ -625,8 +788,8 @@
           },
           "duration": {
             "type": "number",
-            "description": "Duration of the experience",
-            "example": 24
+            "description": "Duration of experience in minutes",
+            "example": 60
           },
           "is_activity": {
             "type": "boolean",
@@ -824,8 +987,8 @@
           },
           "duration": {
             "type": "number",
-            "description": "Duration of the experience",
-            "example": 24
+            "description": "Duration of experience in minutes",
+            "example": 60
           },
           "is_activity": {
             "type": "boolean",
@@ -1027,8 +1190,8 @@
           },
           "duration": {
             "type": "number",
-            "description": "Duration of the experience",
-            "example": 24
+            "description": "Duration of experience in minutes",
+            "example": 60
           },
           "is_activity": {
             "type": "boolean",
@@ -1160,8 +1323,8 @@
           },
           "duration": {
             "type": "number",
-            "description": "Duration of the experience",
-            "example": 24
+            "description": "Duration of experience in minutes",
+            "example": 60
           },
           "is_activity": {
             "type": "boolean",
@@ -1558,6 +1721,346 @@
     }
   },
   "paths": {
+    "/bookings": {
+      "get": {
+        "summary": "View all bookings",
+        "description": "Returns information about all bookings",
+        "tags": [
+          "Booking"
+        ],
+        "operationId": "get_all_bookings",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BookingList"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalServerError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerError"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new booking",
+        "description": "Creates a new booking based on the data provided in the request body.",
+        "tags": [
+          "Booking"
+        ],
+        "operationId": "create_booking",
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BookingUpsert"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Booking"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "BadRequest",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Forbidden"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFound",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFound"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalServerError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/bookings/{booking_id}": {
+      "parameters": [
+        {
+          "name": "booking_id",
+          "in": "path",
+          "required": true,
+          "description": "ID of the booking to be deleted",
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "get": {
+        "summary": "View booking by id",
+        "description": "Returns booking information by id",
+        "tags": [
+          "Booking"
+        ],
+        "operationId": "get_booking_by_id",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Booking"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "BadRequest",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFound",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFound"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalServerError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerError"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "Update booking",
+        "description": "Updates the information of the desired booking",
+        "tags": [
+          "Booking"
+        ],
+        "operationId": "update_booking",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BookingUpsert"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Booking"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "BadRequest",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Forbidden"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFound",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFound"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalServerError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerError"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Remove booking",
+        "description": "Deletes a booking based on the ID provided",
+        "tags": [
+          "Booking"
+        ],
+        "operationId": "delete_booking",
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DeleteSuccess"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "BadRequest",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Forbidden"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFound",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFound"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalServerError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/categories": {
       "get": {
         "summary": "View all categories",
@@ -3611,6 +4114,10 @@
     }
   },
   "tags": [
+    {
+      "name": "Booking",
+      "description": "Routes for booking manipulation"
+    },
     {
       "name": "Category",
       "description": "Routes for category manipulation"
